--- a/resources/css/___variables.scss
+++ b/resources/css/___variables.scss
@@ -37,3 +37,8 @@ $primary_button: #000;
 .inactive_user {
     text-decoration: line-through;
 }
+
+.button a {
+    text-decoration: none;
+    font-weight: bold;
+}
