--- a/resources/css/__navbar.scss
+++ b/resources/css/__navbar.scss
@@ -7,9 +7,10 @@ nav {
     padding: 15px 5%;
     position: sticky;
     top: 0;
-    background: rgba(255, 255, 255, 0.3);
+    background: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(5px);
     box-shadow: 4px 2px 4px #5f5f5f;
+    z-index: 1000;
 
     a {
         text-decoration: none;
