--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -21,6 +21,11 @@
   text-decoration: line-through;
 }
 
+.button a {
+  text-decoration: none;
+  font-weight: bold;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -205,10 +210,11 @@ nav {
   padding: 15px 5%;
   position: sticky;
   top: 0;
-  background: rgba(255, 255, 255, 0.3);
+  background: rgba(255, 255, 255, 0.8);
   -webkit-backdrop-filter: blur(5px);
           backdrop-filter: blur(5px);
   box-shadow: 4px 2px 4px #5f5f5f;
+  z-index: 1000;
 }
 nav a {
   text-decoration: none;
@@ -556,6 +562,121 @@ footer .copyright {
   padding: 0.5em;
   margin: 0.5em 0;
   color: green;
+}
+
+.Homepage section:not(:nth-of-type(1)) {
+  margin: 5em 0;
+}
+.Homepage .Hero {
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.75)), url("../../public/assets/images/hero.webp");
+  background-size: cover;
+  background-position: center;
+  height: 90dvh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.Homepage .Hero .container {
+  text-align: center;
+  color: #fff;
+}
+.Homepage .Hero .container .title {
+  font-size: 2.4em;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin: 0.5em 0 1em;
+}
+.Homepage .Hero .container .sub_title {
+  font-size: 1.2em;
+}
+.Homepage .Hero .container .button a {
+  border: 2px solid #fff;
+  border-radius: 32px;
+  padding: 12px 32px;
+  color: #fff;
+}
+.Homepage .About .container {
+  width: 80%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 2em;
+}
+.Homepage .About .container .about_card {
+  text-align: center;
+  background: #000;
+  border-radius: 8px;
+  padding: 10px 14px;
+  position: relative;
+}
+.Homepage .About .container .about_card .icon {
+  position: absolute;
+  top: -40px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #000;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+.Homepage .About .container .about_card .icon i {
+  font-size: 1.5em;
+  color: #fff;
+}
+.Homepage .About .container .about_card .text p {
+  font-size: 0.9em;
+  color: #d6d6d6;
+}
+.Homepage .About .container .about_card .text .title {
+  color: #fff;
+  font-size: 1.1em;
+  font-weight: bold;
+  margin: 1.5em 0 0.5em;
+}
+.Homepage .Mission_vission .container .container_title {
+  text-align: center;
+  font-size: 2em;
+  font-weight: bold;
+}
+.Homepage .Mission_vission .container .content {
+  margin: 2em 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2em;
+}
+.Homepage .Mission_vission .container .content img {
+  border-radius: 8px;
+}
+.Homepage .Mission_vission .container .content .statement {
+  padding: 8px 10px;
+  margin: 0 0 2em;
+}
+.Homepage .Mission_vission .container .content .statement .title {
+  font-weight: bold;
+  font-size: 1.1em;
+}
+.Homepage .Statistics {
+  margin-bottom: 0 !important;
+  background: rgb(12, 204, 218);
+  padding: 2em 0;
+}
+.Homepage .Statistics .container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+.Homepage .Statistics .container .stat {
+  text-align: center;
+}
+.Homepage .Statistics .container .stat .number {
+  font-size: 2.4em;
+  font-weight: bold;
+}
+.Homepage .Statistics .container .stat .text {
+  font-size: 1.2em;
 }
 
 .Contact .container {
