--- a/resources/css/_Authentication.scss
+++ b/resources/css/_Authentication.scss
@@ -1,103 +1,146 @@
 .Authentication {
-    .Login,
-    .Signup {
+    .Login {
         @include flex_center;
         height: 90dvh;
 
-        p {
-            margin: 0.5em 0;
+        a {
+            text-decoration: none;
+            font-weight: bold;
         }
-    }
-
-    .Profile_update {
-        .page_header {
-            margin: 0 0 1em;
-            padding: 1.5em 5%;
-        }
-
-        h1,
-        h2 {
-            font-size: 1.2em;
-        }
-
-        h2 {
-            margin: 0 0 0.3em;
-        }
-
-        .section {
-            padding: 1.4em 3%;
-            border-radius: 8px;
-            margin: 0 auto 1em;
-
-            .header {
-                margin: 0 0 1em;
-            }
-        }
-    }
-
-    .Verify_email,
-    .Forgot_password,
-    .Reset_password {
-        .header{
-            text-align: center;
-            margin: 3em auto 2em;
-
-            p {
-                line-height: 1.3;
-            }
-        }
-
-        form {
-            margin: 2em 0;
-        }
-    }
-
-    .Verify_email {
-        text-align: center;
-    }
-
-    .Account_suspended {
-        height: 60vh;
-        @include flex_center;
 
         .container {
-            text-align: center;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 1em;
+            align-items: center;
 
-            .image {
-                span {
-                    font-size: 2.5em;
-                }
-            }
-    
-            .text {
-                margin: 0.8em 0 0;
+            .portals {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                padding: 4px 8px;
 
-                p {
-                    &:first-of-type {
-                        @include font_size(1.2em, 2.5em);
-                        font-weight: bold;
-                        color: $danger;
+                .portal {
+                    &:not(:last-of-type) {
+                        margin: 0 0 1.5em;
                     }
-                }
-
-                .button {
-                    margin: 1.8em 0;
+                    width: 50%;
 
                     a {
-                        border-radius: 32px;
-                        padding: 12px 24px;
+                        text-align: center;
+                        display: block;
+                        color: #fff;
+                        background: #000;
+                        padding: 12px 16px;
+                        border-radius: 8px;
                     }
+                }
+
+                .active a {
+                    background: rgb(187, 187, 187);
+                    color: #000;
+                    cursor: default;
+                }
+            }
+
+            .login_form {
+                p {
+                    margin: 0 0 0.5em;
                 }
             }
         }
     }
 }
+// .Authentication {
+//     .Profile_update {
+//         .page_header {
+//             margin: 0 0 1em;
+//             padding: 1.5em 5%;
+//         }
 
-@media screen and (width >= 726px) {
-    .Verify_email,
-    .Forgot_password,
-    .Reset_password {
-        width: 50%;
-        margin: auto;
-    }
-}
+//         h1,
+//         h2 {
+//             font-size: 1.2em;
+//         }
+
+//         h2 {
+//             margin: 0 0 0.3em;
+//         }
+
+//         .section {
+//             padding: 1.4em 3%;
+//             border-radius: 8px;
+//             margin: 0 auto 1em;
+
+//             .header {
+//                 margin: 0 0 1em;
+//             }
+//         }
+//     }
+
+//     .Verify_email,
+//     .Forgot_password,
+//     .Reset_password {
+//         .header{
+//             text-align: center;
+//             margin: 3em auto 2em;
+
+//             p {
+//                 line-height: 1.3;
+//             }
+//         }
+
+//         form {
+//             margin: 2em 0;
+//         }
+//     }
+
+//     .Verify_email {
+//         text-align: center;
+//     }
+
+//     .Account_suspended {
+//         height: 60vh;
+//         @include flex_center;
+
+//         .container {
+//             text-align: center;
+
+//             .image {
+//                 span {
+//                     font-size: 2.5em;
+//                 }
+//             }
+    
+//             .text {
+//                 margin: 0.8em 0 0;
+
+//                 p {
+//                     &:first-of-type {
+//                         @include font_size(1.2em, 2.5em);
+//                         font-weight: bold;
+//                         color: $danger;
+//                     }
+//                 }
+
+//                 .button {
+//                     margin: 1.8em 0;
+
+//                     a {
+//                         border-radius: 32px;
+//                         padding: 12px 24px;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
+
+// @media screen and (width >= 726px) {
+//     .Verify_email,
+//     .Forgot_password,
+//     .Reset_password {
+//         width: 50%;
+//         margin: auto;
+//     }
+// }
