--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -859,96 +859,51 @@ footer .copyright {
     margin: 0.5em 0;
   }
 }
-.Authentication .Login,
-.Authentication .Signup {
+.Authentication .Login {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 90dvh;
 }
-.Authentication .Login p,
-.Authentication .Signup p {
-  margin: 0.5em 0;
-}
-.Authentication .Profile_update .page_header {
-  margin: 0 0 1em;
-  padding: 1.5em 5%;
-}
-.Authentication .Profile_update h1,
-.Authentication .Profile_update h2 {
-  font-size: 1.2em;
-}
-.Authentication .Profile_update h2 {
-  margin: 0 0 0.3em;
-}
-.Authentication .Profile_update .section {
-  padding: 1.4em 3%;
-  border-radius: 8px;
-  margin: 0 auto 1em;
-}
-.Authentication .Profile_update .section .header {
-  margin: 0 0 1em;
-}
-.Authentication .Verify_email .header,
-.Authentication .Forgot_password .header,
-.Authentication .Reset_password .header {
-  text-align: center;
-  margin: 3em auto 2em;
-}
-.Authentication .Verify_email .header p,
-.Authentication .Forgot_password .header p,
-.Authentication .Reset_password .header p {
-  line-height: 1.3;
-}
-.Authentication .Verify_email form,
-.Authentication .Forgot_password form,
-.Authentication .Reset_password form {
-  margin: 2em 0;
-}
-.Authentication .Verify_email {
-  text-align: center;
-}
-.Authentication .Account_suspended {
-  height: 60vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.Authentication .Account_suspended .container {
-  text-align: center;
-}
-.Authentication .Account_suspended .container .image span {
-  font-size: 2.5em;
-}
-.Authentication .Account_suspended .container .text {
-  margin: 0.8em 0 0;
-}
-.Authentication .Account_suspended .container .text p:first-of-type {
-  font-size: 1.2em;
+.Authentication .Login a {
+  text-decoration: none;
   font-weight: bold;
-  color: red;
 }
-@media screen and (width >= 726px) {
-  .Authentication .Account_suspended .container .text p:first-of-type {
-    font-size: 2.5em;
-  }
+.Authentication .Login .container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1em;
+  align-items: center;
 }
-.Authentication .Account_suspended .container .text .button {
-  margin: 1.8em 0;
+.Authentication .Login .container .portals {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 4px 8px;
 }
-.Authentication .Account_suspended .container .text .button a {
-  border-radius: 32px;
-  padding: 12px 24px;
+.Authentication .Login .container .portals .portal {
+  width: 50%;
+}
+.Authentication .Login .container .portals .portal:not(:last-of-type) {
+  margin: 0 0 1.5em;
+}
+.Authentication .Login .container .portals .portal a {
+  text-align: center;
+  display: block;
+  color: #fff;
+  background: #000;
+  padding: 12px 16px;
+  border-radius: 8px;
+}
+.Authentication .Login .container .portals .active a {
+  background: rgb(187, 187, 187);
+  color: #000;
+  cursor: default;
+}
+.Authentication .Login .container .login_form p {
+  margin: 0 0 0.5em;
 }
 
-@media screen and (width >= 726px) {
-  .Verify_email,
-  .Forgot_password,
-  .Reset_password {
-    width: 50%;
-    margin: auto;
-  }
-}
 .Admin_dashboard .Hero p {
   font-size: 1.2em;
   font-weight: bold;
