Users: added the functionality for updating users. Modified the index page to make it easier to tell the user levels.

--- a/resources/css/_Admin.scss
+++ b/resources/css/_Admin.scss
@@ -86,6 +86,11 @@ $thead_background: #000;
                                 border-radius: 32px;
                                 background: $dashboard_background;
                             }
+
+                            .super_admin {
+                                background: $success;
+                                color: #fff;
+                            }
                         }
 
                         .actions {
