Classes: Added the CRUD functionalities for classes.

--- a/resources/css/_Settings.scss
+++ b/resources/css/_Settings.scss
@@ -6,6 +6,7 @@
         li {
             width: 12%;
             border-bottom: 2px solid $faded;
+            padding: 4px 2px;
 
             a {
                 text-decoration: none;
