--- a/resources/css/___global.scss
+++ b/resources/css/___global.scss
@@ -15,6 +15,19 @@ img {
     object-fit: cover;
 }
 
+.btn_link_wrapper {
+    margin: 0.5em 0;
+
+    .btn_link {
+        text-decoration: none;
+        background: #000;
+        color: #fff;
+        text-align: center;
+        border-radius: 4px;
+        padding: 8px 12px;
+    }
+}
+
 .cards {
     @include grid(3);
     gap: 1.5em;
