--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -48,6 +48,18 @@ img {
      object-fit: cover;
 }
 
+.btn_link_wrapper {
+  margin: 0.5em 0;
+}
+.btn_link_wrapper .btn_link {
+  text-decoration: none;
+  background: #000;
+  color: #fff;
+  text-align: center;
+  border-radius: 4px;
+  padding: 8px 12px;
+}
+
 .cards {
   display: grid;
   grid-template-columns: 1fr;
@@ -1098,4 +1110,11 @@ footer .copyright {
 }
 .Classes .class_sections .sections {
   margin: 1em 0 0;
+}
+
+.Users .another_section {
+  margin: 2em 0 0.5em;
+}
+.Users .another_section .title {
+  font-weight: bold;
 }/*# sourceMappingURL=styles.css.map */
