Admin Layout and styles: modified the styles to use app_main and app_content to make it more general for all users.

--- a/resources/css/_Admin.scss
+++ b/resources/css/_Admin.scss
@@ -1,12 +1,12 @@
 $aside_width: 15%;
 $thead_background: #000;
 
-.Admin {
+.app_main {
     aside {
         width: $aside_width;
     }
 
-    .admin_content {
+    .app_content {
         margin-left: $aside_width;
         padding: 4px 15px;
 
