--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -978,14 +978,14 @@ footer .copyright {
   gap: 1em;
 }
 
-.Admin aside {
+.app_main aside {
   width: 15%;
 }
-.Admin .admin_content {
+.app_main .app_content {
   margin-left: 15%;
   padding: 4px 15px;
 }
-.Admin .admin_content .header {
+.app_main .app_content .header {
   display: grid;
   grid-template-columns: 1fr;
   gap: 0.5em;
@@ -993,88 +993,88 @@ footer .copyright {
   margin: 0 0 0.8em;
 }
 @media screen and (width >= 726px) {
-  .Admin .admin_content .header {
+  .app_main .app_content .header {
     grid-template-columns: repeat(3, 1fr);
   }
 }
-.Admin .admin_content .header p {
+.app_main .app_content .header p {
   font-size: 1.1em;
   color: #2b2b2b;
 }
-.Admin .admin_content .header p span {
+.app_main .app_content .header p span {
   font-size: 0.85em;
 }
-.Admin .admin_content .header input {
+.app_main .app_content .header input {
   padding: 6px 12px;
   border-radius: 32px;
   border: 1px solid grey;
 }
-.Admin .admin_content .header .header_btn a {
+.app_main .app_content .header .header_btn a {
   text-decoration: none;
   background: #000;
   color: #fff;
   padding: 4px 8px;
   border-radius: 4px;
 }
-.Admin .admin_content .body {
+.app_main .app_content .body {
   overflow: scroll;
 }
-.Admin .admin_content .body .table {
+.app_main .app_content .body .table {
   width: 100%;
   border-spacing: 0;
   border-collapse: collapse;
 }
-.Admin .admin_content .body .table thead {
+.app_main .app_content .body .table thead {
   color: #fff;
   background: #000;
 }
-.Admin .admin_content .body .table thead th {
+.app_main .app_content .body .table thead th {
   padding: 6px;
   font-size: 0.9em;
   text-align: left;
 }
-.Admin .admin_content .body .table thead th:last-of-type {
+.app_main .app_content .body .table thead th:last-of-type {
   border-radius: 0 8px 0 0;
 }
-.Admin .admin_content .body .table thead th:first-of-type {
+.app_main .app_content .body .table thead th:first-of-type {
   border-radius: 8px 0 0 0;
 }
-.Admin .admin_content .body .table tbody tr {
+.app_main .app_content .body .table tbody tr {
   border-bottom: 1px solid silver;
 }
-.Admin .admin_content .body .table tbody tr td {
+.app_main .app_content .body .table tbody tr td {
   padding: 2px 6px;
 }
-.Admin .admin_content .body .table tbody tr td a {
+.app_main .app_content .body .table tbody tr td a {
   color: blue;
   text-decoration: none;
 }
-.Admin .admin_content .body .table tbody tr td .td_span {
+.app_main .app_content .body .table tbody tr td .td_span {
   padding: 2px 6px;
   font-size: 0.65em;
   font-weight: bold;
   border-radius: 32px;
   background: #dedefd;
 }
-.Admin .admin_content .body .table tbody tr td .super_admin {
+.app_main .app_content .body .table tbody tr td .super_admin {
   background: green;
   color: #fff;
 }
-.Admin .admin_content .body .table tbody tr .actions {
+.app_main .app_content .body .table tbody tr .actions {
   display: flex;
   justify-content: center;
   gap: 0 2em;
 }
-.Admin .admin_content .custom_form form {
+.app_main .app_content .custom_form form {
   padding: 15px;
   border: 1px solid #b3b3b3;
   border-radius: 0 0 6px 6px;
 }
-.Admin .admin_content .custom_form form:not(:first-of-type) {
+.app_main .app_content .custom_form form:not(:first-of-type) {
   margin: 2.5em 0 0;
   border-radius: 6px;
 }
-.Admin .admin_content .delete_btn {
+.app_main .app_content .delete_btn {
   margin: 0.5em 0 0;
 }
 
