Styles: updated the Admin.scss to App.scss to make it a general styling file for the whole application.

--- a/resources/css/_App.scss
+++ b/resources/css/_App.scss
@@ -124,8 +124,8 @@ $thead_background: #000;
 
 
 @media screen and (width >= 726px) {
-    .Admin {
-        .admin_content {
+    .app_main {
+        .app_content {
             .header {
                 .header_btn {
                     justify-self: right;
