--- a/resources/css/styles.scss
+++ b/resources/css/styles.scss
@@ -16,7 +16,7 @@
 @import "Authentication";
 @import "Dashboard";
 
-@import "Admin";
+@import "App";
 @import "Settings";
 @import "Classes";
 @import "Users";
