--- a/resources/css/__forms.scss
+++ b/resources/css/__forms.scss
@@ -163,6 +163,30 @@ a.btn {
     }
 }
 
+.info_wrapper {
+    margin: 0 0 2em;
+
+    .title {
+        font-weight: bold;
+        font-size: 1.1em;
+        margin: 0 0 0.3em;
+    }
+
+    .info {
+        p {
+            margin: 0 0 0.2em;
+            display: grid;
+            grid-template-columns: 15% 85%;
+
+            span {
+                &:nth-of-type(1) {
+                    color: rgb(104, 104, 104);
+                }
+            }
+        }
+    }
+}
+
 @media screen and (width >= 726px) {
     .custom_form {
         .row_input_group,
