Payments: added the functionality for adding payment records and receipts after a student makes a payment.

--- a/resources/css/_App.scss
+++ b/resources/css/_App.scss
@@ -94,9 +94,10 @@ $thead_background: #000;
                         }
 
                         .actions {
-                            display: flex;
+                            display: grid;
+                            grid-template-columns: auto auto;
                             justify-content: center;
-                            gap: 0 2em;
+                            gap: 0 0.5em;
                         }
                     }
                 }
