--- a/resources/css/___global.scss
+++ b/resources/css/___global.scss
@@ -15,17 +15,31 @@ img {
     object-fit: cover;
 }
 
+.btn {
+    background: $primary_button;
+    border-radius: 4px;
+    color: #fff;
+    padding: 8px 12px;
+    border: none;
+}
+
 .btn_link_wrapper {
     margin: 0.5em 0;
 
     .btn_link {
         text-decoration: none;
-        background: #000;
-        color: #fff;
         text-align: center;
-        border-radius: 4px;
-        padding: 8px 12px;
     }
+}
+
+p.title {
+    font-weight: bold;
+    font-size: 1.1em;
+    margin: 0 0 0.1em;
+}
+
+.mt-10 {
+    margin-top: 1em;
 }
 
 .cards {
