--- a/resources/css/___variables.scss
+++ b/resources/css/___variables.scss
@@ -8,16 +8,31 @@ $dark_text: #000;
 $text_faded: #2b2b2b;
 
 $faded: grey;
+$info: $theme_3;
 $danger: red;
 $success: green;
 $warning: #c28005;
 $status: #c28005;
 
 $primary_button: #000;
+$info_button: $info;
+
+.info {
+    color: $info;
+}
+
+.success {
+    color: $success;
+}
+
+.danger {
+    color: $danger;
+}
 
 .center {
     text-align: center !important;
 }
+
 
 .published {
     color: $success;
@@ -45,4 +60,8 @@ $primary_button: #000;
 .button a {
     text-decoration: none;
     font-weight: bold;
+}
+
+.btn_info {
+    background: $info_button;
 }
