Payments: restructured the UI to make the create form be on the same page as index so that it's easier to just add and view the added payments.

--- a/resources/css/_App.scss
+++ b/resources/css/_App.scss
@@ -141,6 +141,12 @@ $thead_background: #000;
                 width: 88%;
                 margin: auto;
             }
+
+            .row_container {
+                display: grid;
+                grid-template-columns: 2fr 1fr;
+                gap: 0 1em;
+            }
         }
     }
 }
