--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1147,6 +1147,15 @@ footer .copyright {
   gap: 0 0.5em;
 }
 
+.system_nav {
+  margin: 0 0 0.5em;
+}
+.system_nav a {
+  color: purple;
+  font-weight: bold;
+  text-decoration: none;
+}
+
 @media screen and (width >= 726px) {
   .app_main .app_content .header .header_btn {
     justify-self: right;
