--- a/resources/css/_Authentication.scss
+++ b/resources/css/_Authentication.scss
@@ -31,8 +31,10 @@
                         display: block;
                         color: #fff;
                         background: #000;
-                        padding: 12px 16px;
+                        padding: 12px 4px;
                         border-radius: 8px;
+                        font-size: 0.97em;
+
                     }
                 }
 
