--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -981,8 +981,9 @@ footer .copyright {
   display: block;
   color: #fff;
   background: #000;
-  padding: 12px 16px;
+  padding: 12px 4px;
   border-radius: 8px;
+  font-size: 0.97em;
 }
 .Authentication .Login .container .portals .active a {
   background: rgb(187, 187, 187);
@@ -1237,4 +1238,24 @@ footer .copyright {
 }
 .Printable .body .payment p {
   font-weight: bold;
+}
+
+.StudentPortal .separator {
+  border: 1px solid rgb(230, 230, 230);
+  margin: 0 0 0.5em;
+}
+.StudentPortal .details {
+  margin: 0.8em 0 2em;
+  width: 40%;
+}
+.StudentPortal .details .title {
+  font-weight: bold;
+}
+.StudentPortal .details p {
+  margin: 0 0 0.5em;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+.StudentPortal .details p span:first-of-type {
+  font-style: italic;
 }/*# sourceMappingURL=styles.css.map */
