--- a/resources/css/___global.scss
+++ b/resources/css/___global.scss
@@ -15,74 +15,11 @@ img {
     object-fit: cover;
 }
 
-.btn_link_wrapper {
-    margin: 0.5em 0;
-}
-
-.btn_link {
+a {
     text-decoration: none;
-    text-align: center;
+    color: blue;
 }
 
-.btn_link,
-.btn {
-    background: $primary_button;
-    border-radius: 4px;
-    color: #fff !important;
-    padding: 8px 12px;
-    border: none;
-}
-
-p.title {
+.title {
     font-weight: bold;
-    font-size: 1.1em;
-    margin: 0 0 0.1em;
-}
-
-.mt-10 {
-    margin-top: 1em;
-}
-
-.cards {
-    @include grid(3);
-    gap: 1.5em;
-
-    .card {
-        .image {
-            width: 100%;
-            height: 200px;
-            
-            img {
-                border-radius: 8px;
-            }
-        }
-
-        .text {
-            padding: 0 6px;
-            margin: 0.5em 0 0;
-            
-            .extra_details {
-                display: flex;
-                flex-wrap: wrap;
-                gap: 0.8em;
-                margin: 0 0 0.5em;
-
-                span {
-                    font-size: 0.8em;
-                }
-            }
-
-            .details {
-                display: grid;
-                gap: 0.5em;
-
-                .title {
-                    text-decoration: none;
-                    color: $dark_text;
-                    font-size: 1.12em;
-                    font-weight: bold;
-                }
-            }
-        }
-    }
 }
