--- a/resources/css/___variables.scss
+++ b/resources/css/___variables.scss
@@ -1,71 +1,4 @@
-$theme_1: #222831;
-$theme_2: #393e46;
-$theme_3: #00adb5;
-$theme_4: #00fff5;
-
-$light_text: #eee;
-$dark_text: #000;
-$text_faded: #2b2b2b;
-
-$white: #fff;
-$faded: grey;
-$info: $theme_3;
 $danger: red;
 $success: green;
-$warning: #c28005;
-$status: #c28005;
 
-$primary_button: #000;
-$info_button: $info;
-
-.info {
-    color: $info;
-}
-
-.success {
-    color: $success;
-}
-
-.danger {
-    color: $danger;
-}
-
-.white {
-    color: $white;
-}
-
-.center {
-    text-align: center !important;
-}
-
-.published {
-    color: $success;
-    font-weight: bold;
-}
-
-.faded {
-    color: darken($faded, 20);
-}
-
-.super_admin {
-    background: $success;
-}
-
-.inactive,
-.unverified,
-.draft {
-    color: $danger;
-}
-
-.inactive_user {
-    text-decoration: line-through;
-}
-
-.button a {
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.btn_info {
-    background: $info_button;
-}
+$faded_background: #e6fcfd;
