--- a/resources/css/__footer.scss
+++ b/resources/css/__footer.scss
@@ -1,21 +1,17 @@
 footer {
-    background: $theme_1;
-    padding: 16px 0 0;
-
-    * {color: $light_text;}
+    *{color: #fff;}
+    background: darken($faded_background, 85%);
+    padding: 3.2em 0 0;
 
     .container {
         section {
             margin: 0 0 1.5em;
-            a {
-                text-decoration: none;
-            }
         }
 
         .branding {
             .image {
-                height: 100px;
-                width: 100px;
+                height: 150px;
+                width: 150px;
  
                 img {
                     object-fit: contain;
@@ -24,7 +20,6 @@ footer {
 
             .app_name {
                 font-size: 1.5em;
-                font-weight: bold;
                 margin: 0.2em 0;
             }
         }
@@ -43,17 +38,17 @@ footer {
             .socials {
                 margin: 0.6em 0 0;
                 img {
-                    width: 20px;
-                    margin-right: 0.5em;
+                    width: 25px;
+                    margin-right: 1em;
                 }
             }
         }
     }
 
     .copyright {
-        border-top: 1px solid $faded;
+        border-top: 1px solid $faded_background;
         text-align: center;
-        padding: 8px;
+        padding: 12px;
     }
 }
 
