--- a/resources/css/___buttons.scss
+++ b/resources/css/___buttons.scss
@@ -12,3 +12,16 @@
         transition: all 0.2s ease-in-out;
     }
 }
+
+form {
+    button {
+        margin: 1.5em 0;
+        border: none;
+        border-radius: 4px;
+        background: $button_background;
+        color: #fff;
+        padding: 8px 12px;
+        font-weight: bold;
+        font-size: 1em;
+    }
+}
