--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -39,6 +39,17 @@ a {
   transition: all 0.2s ease-in-out;
 }
 
+form button {
+  margin: 1.5em 0;
+  border: none;
+  border-radius: 4px;
+  background: #000;
+  color: #fff;
+  padding: 8px 12px;
+  font-weight: bold;
+  font-size: 1em;
+}
+
 nav {
   height: 10vh;
   display: grid;
@@ -212,6 +223,46 @@ footer .copyright {
     margin: auto;
   }
 }
+.alert {
+  padding: 0.5em 1em;
+  border-radius: 4px;
+  color: #fff;
+  font-weight: bold;
+  position: absolute;
+  right: transformX(-50%);
+  bottom: 0;
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
+  z-index: 10;
+}
+
+.alert-danger {
+  background: red;
+}
+
+.alert-success {
+  background: green;
+}
+
+.alert-status {
+  background: lightblue;
+}
+
+.alert-warning {
+  background: #c28005;
+}
+
+.inline_alert {
+  margin: 0.1em 0 0;
+  color: red;
+}
+
+.inline_alert_success {
+  padding: 0.5em;
+  margin: 0.5em 0;
+  color: green;
+}
+
 .Home_Page section:not(:nth-of-type(1)) {
   margin: 5em 0;
 }
@@ -328,5 +379,62 @@ footer .copyright {
   }
   .Mission_Vision .container .content .sub_title {
     font-size: 1.2em;
+  }
+}
+.Authentication {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90dvh;
+  padding: 0 10px;
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../public/assets/images/auth.png");
+  background-size: cover;
+  background-position: center;
+}
+.Authentication form {
+  background: #fff;
+  padding: 32px 24px 16px;
+  border-radius: 8px;
+}
+.Authentication form .header {
+  margin: 0 0 2em;
+}
+.Authentication form .input_group {
+  margin: 0 0 0.8em;
+}
+.Authentication form .input_group label {
+  margin: 0 16px 0;
+}
+.Authentication form .input_group input {
+  border-radius: 32px;
+  padding: 12px 16px;
+  width: 100%;
+  font-size: 1em;
+  border: 1px solid grey;
+  margin: 0.2em 0;
+}
+.Authentication .Login .portals {
+  display: flex;
+  justify-content: space-evenly;
+}
+.Authentication .Login .portals p {
+  border-radius: 32px;
+  padding: 8px 24px;
+}
+.Authentication .Login .portals p:hover {
+  background: #9ff4f7;
+  transition: all 0.2s ease-in-out;
+}
+.Authentication .Login .portals p a {
+  color: #000;
+}
+.Authentication .Login .portals .active {
+  font-weight: bold;
+  background: #b7f6f9;
+}
+
+@media screen and (width >= 726px) {
+  .Authentication form {
+    width: 350px;
   }
 }/*# sourceMappingURL=styles.css.map */
