--- a/resources/css/styles.scss
+++ b/resources/css/styles.scss
@@ -4,8 +4,11 @@
 @import "__buttons";
 
 @import "_navbar";
+@import "_aside";
 @import "_footer";
 @import "_alerts";
 
 @import "Home_Page";
 @import "Authentication";
+@import "App";
+@import "Student_Portal";
