--- a/resources/css/_App.scss
+++ b/resources/css/_App.scss
@@ -1,6 +1,11 @@
 $aside_width: 15%;
 
 .app_main {
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../../public/assets/images/auth.png');
+    background-size: cover;
+    background-position: center;
+    height: 100dvh;
+    
     aside {
         width: $aside_width;
     }
