Styles updates as well as class updates for some custom form elements.

--- a/resources/css/___variables.scss
+++ b/resources/css/___variables.scss
@@ -1,8 +1,10 @@
 $danger: red;
 $success: green;
-$status: lightblue;
+$status: rgb(73, 206, 250);
 $warning: #c28005;
 
 $faded_background: #e6fcfd;
-$faded_line: rgb(204, 204, 204);
+$dashboard_background: #dedefd;
 $button_background: #000;
+$faded_line: rgb(204, 204, 204);
+$faded_text: rgb(77, 77, 77);
