--- a/resources/css/styles.scss
+++ b/resources/css/styles.scss
@@ -7,6 +7,8 @@
 @import "_aside";
 @import "_footer";
 @import "_alerts";
+@import "_tables";
+@import "_forms";
 
 @import "Home_Page";
 @import "Authentication";
