--- a/resources/css/_App.scss
+++ b/resources/css/_App.scss
@@ -1,7 +1,7 @@
 $aside_width: 15%;
 
 .app_main {
-    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url('../../public/assets/images/auth.png');
+    background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url('../../public/assets/images/auth.png');
     background-size: cover;
     background-position: center;
     height: 100dvh;
@@ -20,6 +20,7 @@ $aside_width: 15%;
             margin: 0 0 0.8em;
 
             p {
+                color: #fff;
                 font-size: 1.1em;
                 span {
                     font-size: 0.85em;
@@ -27,18 +28,27 @@ $aside_width: 15%;
             }
 
             input {
-                padding: 6px 12px;
+                padding: 8px 16px;
                 border-radius: 32px;
                 border: 1px solid $faded_line;
+                font-size: 1em;
             }
 
             .header_btn {
                 a {
                     text-decoration: none;
-                    background: #000;
-                    color: #fff;
-                    padding: 4px 8px;
+                    background: #fff;
+                    color: #000;
+                    padding: 8px 16px;
                     border-radius: 4px; 
+                    font-weight: bold;
+                    font-size: 1.05em;
+
+                    &:hover {
+                        background: #000;
+                        color: #fff;
+                        transition: all 0.3s ease-in-out;
+                    }
                 }
             }
 
