--- a/resources/css/___buttons.scss
+++ b/resources/css/___buttons.scss
@@ -1,3 +1,20 @@
+form {
+    button {
+        margin: 0.5em 0;
+        border: none;
+        border-radius: 4px;
+        background: $button_background;
+        color: #fff;
+        padding: 8px 12px;
+        font-weight: bold;
+        font-size: 1em;
+
+        &:hover {
+            opacity: 0.85;
+        }
+    }
+}
+
 .btn_hero {
     padding: 12px 32px;
     border: 2px solid #fff;
@@ -13,15 +30,6 @@
     }
 }
 
-form {
-    button {
-        margin: 1.5em 0;
-        border: none;
-        border-radius: 4px;
-        background: $button_background;
-        color: #fff;
-        padding: 8px 12px;
-        font-weight: bold;
-        font-size: 1em;
-    }
+.btn_danger {
+    background: $danger!important;
 }
