--- a/resources/css/__alerts.scss
+++ b/resources/css/__alerts.scss
@@ -4,8 +4,9 @@
     color: #fff;
     font-weight: bold;
     position: absolute;
-    right: transformX(-50%);
-    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 10px;
     opacity: 1;
     transition: opacity 0.5s ease-in-out;
     z-index: 10;
