--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -25,6 +25,24 @@ a {
   font-weight: bold;
 }
 
+.danger {
+  color: red;
+}
+
+form button {
+  margin: 0.5em 0;
+  border: none;
+  border-radius: 4px;
+  background: #000;
+  color: #fff;
+  padding: 8px 12px;
+  font-weight: bold;
+  font-size: 1em;
+}
+form button:hover {
+  opacity: 0.85;
+}
+
 .btn_hero {
   padding: 12px 32px;
   border: 2px solid #fff;
@@ -39,15 +57,8 @@ a {
   transition: all 0.2s ease-in-out;
 }
 
-form button {
-  margin: 1.5em 0;
-  border: none;
-  border-radius: 4px;
-  background: #000;
-  color: #fff;
-  padding: 8px 12px;
-  font-weight: bold;
-  font-size: 1em;
+.btn_danger {
+  background: red !important;
 }
 
 nav {
@@ -199,7 +210,18 @@ aside ul li {
   padding: 4px;
 }
 aside ul li a {
-  color: #f2f2f2;
+  opacity: 0.75;
+}
+aside .active,
+aside ul li:hover {
+  background: #e6fcfd;
+  color: #000;
+}
+aside .active a,
+aside ul li:hover a {
+  color: #000;
+  font-weight: bold;
+  opacity: 1;
 }
 aside .footer {
   position: absolute;
@@ -221,10 +243,6 @@ aside .footer .logout form button {
 }
 aside .footer .logout form button i {
   color: red;
-}
-aside .active a {
-  color: #fff;
-  font-weight: bold;
 }
 
 @media screen and (width >= 726px) {
@@ -345,8 +363,9 @@ footer .copyright {
   color: #fff;
   font-weight: bold;
   position: absolute;
-  right: transformX(-50%);
-  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 10px;
   opacity: 1;
   transition: opacity 0.5s ease-in-out;
   z-index: 10;
@@ -361,7 +380,7 @@ footer .copyright {
 }
 
 .alert-status {
-  background: lightblue;
+  background: rgb(73, 206, 250);
 }
 
 .alert-warning {
@@ -379,6 +398,174 @@ footer .copyright {
   color: green;
 }
 
+.table {
+  width: 100%;
+  border-spacing: 0;
+  border-collapse: collapse;
+  color: #fff;
+}
+.table thead {
+  background: #fff;
+}
+.table thead th {
+  padding: 6px;
+  font-size: 0.9em;
+  text-align: left;
+  color: #000;
+}
+.table thead th:first-of-type {
+  border-radius: 4px 0 0 0;
+}
+.table thead th:last-of-type {
+  border-radius: 0 4px 0 0;
+}
+.table tbody tr {
+  border-bottom: 1px solid rgb(204, 204, 204);
+}
+.table tbody tr td {
+  padding: 4px 8px;
+}
+.table tbody tr td a {
+  color: lightblue;
+}
+.table tbody tr td .td_span {
+  padding: 2px 6px;
+  font-size: 0.6em;
+  font-weight: bold;
+  border-radius: 32px;
+  background: #dedefd;
+  color: #000;
+}
+.table tbody tr td .super_admin {
+  background: green;
+  color: #fff;
+}
+.table tbody tr .actions {
+  display: grid;
+  grid-template-columns: auto auto;
+  justify-content: center;
+  gap: 0 0.5em;
+}
+
+.custom_form {
+  background: #ffffff;
+  border-radius: 6px;
+  margin: 1em 0;
+}
+.custom_form header {
+  border-radius: 6px 6px 0 0;
+  background: #3f3e3e;
+  color: #fff;
+  padding: 0.5em 24px;
+  margin: 0 0 0.8em;
+  display: flex;
+  justify-content: space-between;
+}
+.custom_form header p {
+  font-weight: bold;
+}
+.custom_form header .navigation a {
+  color: lightblue;
+}
+.custom_form form {
+  padding: 0 24px 12px;
+}
+.custom_form form label {
+  font-size: 0.9em;
+  color: rgb(77, 77, 77);
+}
+.custom_form form label.required::after {
+  content: " * ";
+  color: red;
+  font-weight: bold;
+  font-size: 1em;
+}
+.custom_form form input,
+.custom_form form select,
+.custom_form form textarea {
+  background: transparent;
+  border: 1px solid rgb(204, 204, 204);
+  border-radius: 4px;
+  margin: 0.04em 0 0.5em;
+  padding: 4px 6px;
+  font-size: 1em;
+  width: 100%;
+}
+.custom_form form .input_group {
+  margin: 0 0 0.3em;
+}
+.custom_form form .input_group .custom_radio_buttons {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+  margin: 0.3em 0 0;
+}
+.custom_form form .input_group .custom_radio_buttons label {
+  position: relative;
+  padding: 0.3em 0;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  width: auto;
+}
+.custom_form form .input_group .custom_radio_buttons label .option_radio {
+  margin: 0 0.5em 0 0;
+  position: relative;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  cursor: pointer;
+  border: unset;
+  width: auto;
+}
+.custom_form form .input_group .custom_radio_buttons label .option_radio:before {
+  transition: transform 0.4s cubic-bezier(0.45, 1.8, 0.5, 0.75);
+  transform: scale(0, 0);
+  position: absolute;
+  top: 0;
+  left: 0.125rem;
+  content: "";
+  z-index: 1;
+  width: 0.7rem;
+  height: 0.7rem;
+  border-radius: 50%;
+  background: #16a085;
+}
+.custom_form form .input_group .custom_radio_buttons label .option_radio:checked:before {
+  transform: scale(1, 1);
+}
+.custom_form form .input_group .custom_radio_buttons label .option_radio:after {
+  content: "";
+  position: absolute;
+  top: -0.25rem;
+  left: -0.125rem;
+  width: 0.9rem;
+  height: 0.9rem;
+  background: #fff;
+  border: 2px solid #d6d6d6;
+  border-radius: 50%;
+}
+.custom_form form button {
+  cursor: pointer;
+}
+.custom_form form .buttons {
+  display: flex;
+  gap: 1em;
+}
+
+@media screen and (width >= 726px) {
+  .custom_form .row_input_group,
+  .custom_form .row_input_group_3 {
+    display: grid;
+    gap: 0 1em;
+  }
+  .custom_form .row_input_group {
+    grid-template-columns: 1fr 1fr;
+  }
+  .custom_form .row_input_group_3 {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
 .Home_Page section:not(:nth-of-type(1)) {
   margin: 5em 0;
 }
@@ -555,7 +742,7 @@ footer .copyright {
   }
 }
 .app_main {
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../../public/assets/images/auth.png");
+  background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url("../../public/assets/images/auth.png");
   background-size: cover;
   background-position: center;
   height: 100dvh;
@@ -580,22 +767,31 @@ footer .copyright {
   }
 }
 .app_main .app_content .header p {
+  color: #fff;
   font-size: 1.1em;
 }
 .app_main .app_content .header p span {
   font-size: 0.85em;
 }
 .app_main .app_content .header input {
-  padding: 6px 12px;
+  padding: 8px 16px;
   border-radius: 32px;
   border: 1px solid rgb(204, 204, 204);
+  font-size: 1em;
 }
 .app_main .app_content .header .header_btn a {
   text-decoration: none;
+  background: #fff;
+  color: #000;
+  padding: 8px 16px;
+  border-radius: 4px;
+  font-weight: bold;
+  font-size: 1.05em;
+}
+.app_main .app_content .header .header_btn a:hover {
   background: #000;
   color: #fff;
-  padding: 4px 8px;
-  border-radius: 4px;
+  transition: all 0.3s ease-in-out;
 }
 .app_main .app_content .header .body {
   overflow: scroll;
