Contact Page / Navbar / Footer: added the styles for the contact page as well as modified the navbar and footer.

--- a/resources/css/styles.scss
+++ b/resources/css/styles.scss
@@ -11,6 +11,7 @@
 @import "_forms";
 
 @import "Home_Page";
+@import "Contact_Page";
 @import "Authentication";
 @import "App";
 @import "Student_Portal";
