--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -728,6 +728,68 @@ footer .copyright {
     font-size: 1.2em;
   }
 }
+.Contact_Page .container {
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 0.5em;
+  align-items: center;
+}
+@media screen and (width >= 726px) {
+  .Contact_Page .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.Contact_Page .container .text h1 {
+  font-size: 3em;
+}
+@media screen and (width >= 726px) {
+  .Contact_Page .container .text h1 {
+    font-size: 4.5em;
+  }
+}
+.Contact_Page .container .text p {
+  font-size: 1.25em;
+  color: rgb(77, 77, 77);
+  margin: 0.8em 0 0;
+}
+@media screen and (width >= 726px) {
+  .Contact_Page .container .text p {
+    font-size: 2em;
+  }
+}
+.Contact_Page .container .text p span {
+  display: grid;
+}
+
+.Admin .Contact .strikethrough {
+  text-decoration: line-through;
+}
+.Admin .Contact .show_user_message .form_details {
+  border: 1px solid white;
+  padding: 15px;
+}
+.Admin .Contact .show_user_message .user_message_details .time {
+  font-size: 0.75em;
+  text-align: center;
+}
+.Admin .Contact .show_user_message .user_message_details .user_message {
+  background: #dcfcfa;
+  width: 75%;
+  margin: 0.5em 0 2em;
+  padding: 8px 15px;
+  border-radius: 8px 8px 32px 8px;
+  box-shadow: 2px 2px 6px #cacaca;
+}
+.Admin .Contact .show_user_message form {
+  margin: 3em 0;
+}
+@media screen and (width >= 726px) {
+  .Admin .Contact .show_user_message {
+    width: 60% !important;
+    margin: auto;
+  }
+}
+
 .Authentication {
   display: flex;
   align-items: center;
