--- a/resources/css/_Student_Portal.scss
+++ b/resources/css/_Student_Portal.scss
@@ -1,4 +1,6 @@
 .StudentPortal {
+    color: #fff;
+    
     .separator {
         border: 1px solid rgb(230, 230, 230);
         margin: 0 0 0.5em;
