--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -928,6 +928,9 @@ footer .copyright {
     gap: 0 1em;
   }
 }
+.StudentPortal {
+  color: #fff;
+}
 .StudentPortal .separator {
   border: 1px solid rgb(230, 230, 230);
   margin: 0 0 0.5em;
