--- a/resources/css/___variables.scss
+++ b/resources/css/___variables.scss
@@ -4,7 +4,8 @@ $status: rgb(73, 206, 250);
 $warning: #c28005;
 
 $faded_background: #e6fcfd;
-$dashboard_background: #dedefd;
+$dashboard_background: #ffffff;
+$dashboard_background_2: #cfcfff;
 $button_background: #000;
 $faded_line: rgb(204, 204, 204);
 $faded_text: rgb(77, 77, 77);
