--- a/resources/css/___global.scss
+++ b/resources/css/___global.scss
@@ -28,6 +28,10 @@ a {
     color: $danger;
 }
 
+.success {
+    color: $success;
+}
+
 .columns {
     display: grid;
     grid-template-columns: 1fr 1fr;
