Exam Results: started to work on impoving how exam results are entered and displayed.

--- a/resources/css/_App.scss
+++ b/resources/css/_App.scss
@@ -82,9 +82,9 @@ $aside_width: 15%;
                 }
             }
 
-            .body {
-                overflow: hidden;
-            }
+            // .body {
+            //     overflow-x: scroll;
+            // }
 
             .row_container {
                 display: grid;
